@@ -1,5 +1,7 @@
 2.5 (Upcoming 2022)
 
+o Extend -remove-dict-entry to allow search
+o New -replace-dict-entry function to search & replace e.g URLs
 o Output annotations in JSON form with -list-annotations-json
 o Basic merging of AcroForms
 o Output bookmarks in JSON format with -list-bookmarks-json
